samples/_failures_safe/1761307922_ccf621_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3fd5f77.c: In function ‘main’:
./samples/SAFE/__tmp_a3fd5f77.c:157:20: error: missing terminating " character
  157 |             printf("
      |                    ^
./samples/SAFE/__tmp_a3fd5f77.c:157:13: error: expected expression at end of input
  157 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_a3fd5f77.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3fd5f77.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3fd5f77.c:157:13: error: expected declaration or statement at end of input
